[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "beets-beatport4"
version = "0.5.2"
authors = [
  { name="Szymon 'Samik' Tarasinski", email="st.samik@gmail.com" },
]
description = "Plugin for beets (http://beets.io) to replace stock beatport plugin which is not yet compatible with Beatport API v4."
readme = "README.md"
requires-python = ">=3.8"
license = "MIT"
classifiers = [
    'Topic :: Multimedia :: Sound/Audio',
    'Topic :: Multimedia :: Sound/Audio :: Players :: MP3',
    'Environment :: Console',
    'Environment :: Web Environment',
    'Programming Language :: Python',
    'Programming Language :: Python :: 3',
    'Programming Language :: Python :: 3.8',
    'Programming Language :: Python :: 3.9',
    'Programming Language :: Python :: 3.10',
    'Programming Language :: Python :: 3.11',
    'Programming Language :: Python :: 3.12',
    'Programming Language :: Python :: 3.13',
]
dependencies = [
    "beets>=2.5.1",
    "requests",
    "confuse",
]

[project.optional-dependencies]
dev = [
    "mypy",
    "types-requests",
    "pytest",
    "pytest-mock",
    "ruff",
    "responses",
]

[project.urls]
"Homepage" = "https://github.com/Samik081/beets-beatport4"
"Download" = "https://github.com/Samik081/beets-beatport4/releases/download/v0.5.2/beets-beatport4-0.5.2.tar.gz"

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.setuptools.packages.find]
include = ["beetsplug*"]

[tool.ruff]
target-version = "py38"
line-length = 88

[tool.ruff.lint]
select = ["E", "W", "F", "I", "UP", "B", "SIM", "RUF"]
ignore = ["E501", "SIM108"]

[tool.ruff.lint.isort]
known-first-party = ["beetsplug"]
