[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "beets-beatport4"
version = "0.5.2"
authors = [
  { name="Szymon 'Samik' Tarasinski", email="st.samik@gmail.com" },
]
description = "Plugin for beets (http://beets.io) to replace stock beatport plugin which is not yet compatible with Beatport API v4."
readme = "README.md"
requires-python = ">=3.10"
license = "MIT"
classifiers = [
    'Topic :: Multimedia :: Sound/Audio',
    'Topic :: Multimedia :: Sound/Audio :: Players :: MP3',
    'Environment :: Console',
    'Environment :: Web Environment',
    'Programming Language :: Python',
    'Programming Language :: Python :: 3',
    'Programming Language :: Python :: 3.10',
    'Programming Language :: Python :: 3.11',
    'Programming Language :: Python :: 3.12',
    'Programming Language :: Python :: 3.13',
]
dependencies = [
    "beets>=2.5.1",
    "requests",
    "confuse",
]

[project.optional-dependencies]
dev = [
    "mypy",
    "types-requests",
    "pytest",
    "pytest-mock",
    "ruff",
    "responses",
]

[project.urls]
"Homepage" = "https://github.com/Samik081/beets-beatport4"
"Download" = "https://github.com/Samik081/beets-beatport4/releases/download/v0.5.2/beets-beatport4-0.5.2.tar.gz"

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.setuptools.packages.find]
include = ["beetsplug*"]

[tool.ruff]
target-version = "py310"
line-length = 80

[tool.ruff.lint]
future-annotations = true
select = [
    "E",   # pycodestyle
    "F",   # pyflakes
    "G",   # flake8-logging-format
    "I",   # isort
    "ISC", # flake8-implicit-str-concat
    "N",   # pep8-naming
    "PT",  # flake8-pytest-style
    "RUF", # ruff
    "UP",  # pyupgrade
    "TC",  # flake8-type-checking
    "W",   # pycodestyle
]
ignore = [
    "TC006", # no need to quote 'cast's since we use 'from __future__ import annotations'
]

[tool.ruff.lint.per-file-ignores]
"tests/**" = ["RUF001"]

[tool.ruff.lint.isort]
split-on-trailing-comma = false

[tool.ruff.lint.pycodestyle]
max-line-length = 88

[tool.ruff.lint.flake8-pytest-style]
fixture-parentheses = false
mark-parentheses = false
parametrize-names-type = "csv"

[tool.ruff.lint.flake8-unused-arguments]
ignore-variadic-names = true

[tool.ruff.lint.pep8-naming]
classmethod-decorators = ["cached_classproperty"]
extend-ignore-names = ["assert*", "cached_classproperty"]
